[package]
name = "minigrep"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# note that because this is a part of a workspace, the workspace will only use this version of rand
# through the different crates and no excess downloading is done. All the exact dependencies are
# kept track of in the workspace's Cargo.lock
[dependencies]
rand = "0.8.3"
